--- a/.openshiftio/application.yaml
+++ b/.openshiftio/application.yaml
@@ -97,12 +97,12 @@ objects:
       fabric8.io/git-branch: master
       prometheus.io/scrape: "true"
       fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-      fabric8.io/scm-tag: booster-parent-19
+      fabric8.io/scm-tag: booster-parent-20
     labels:
       expose: "true"
       app: health-check-vertx
       provider: fabric8
-      version: 19-SNAPSHOT
+      version: "19"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -119,17 +119,17 @@ objects:
   kind: DeploymentConfig
   metadata:
     annotations:
-      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=19-SNAPSHOT
+      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=19
       fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
       fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
       fabric8.io/iconUrl: img/icons/vertx.svg
       fabric8.io/git-branch: master
       fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-      fabric8.io/scm-tag: booster-parent-19
+      fabric8.io/scm-tag: booster-parent-20
     labels:
       app: health-check-vertx
       provider: fabric8
-      version: 19-SNAPSHOT
+      version: "19"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -146,17 +146,17 @@ objects:
     template:
       metadata:
         annotations:
-          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=19-SNAPSHOT
+          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=19
           fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
           fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
           fabric8.io/iconUrl: img/icons/vertx.svg
           fabric8.io/git-branch: master
           fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-          fabric8.io/scm-tag: booster-parent-19
+          fabric8.io/scm-tag: booster-parent-20
         labels:
           app: health-check-vertx
           provider: fabric8
-          version: 19-SNAPSHOT
+          version: "19"
           group: io.openshift.booster
       spec:
         containers:
@@ -206,7 +206,7 @@ objects:
     labels:
       app: health-check-vertx
       provider: fabric8
-      version: 19-SNAPSHOT
+      version: "19"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
