--- a/.openshiftio/application.yaml
+++ b/.openshiftio/application.yaml
@@ -56,7 +56,7 @@ objects:
     output:
       to:
         kind: ImageStreamTag
-        name: '
+        name: health-check-vertx:20
     postCommit: {}
     resources: {}
     source:
@@ -102,7 +102,7 @@ objects:
       expose: "true"
       app: health-check-vertx
       provider: fabric8
-      version: 20-SNAPSHOT
+      version: "20"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -119,7 +119,7 @@ objects:
   kind: DeploymentConfig
   metadata:
     annotations:
-      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=20-SNAPSHOT
+      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=20
       fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
       fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
       fabric8.io/iconUrl: img/icons/vertx.svg
@@ -129,7 +129,7 @@ objects:
     labels:
       app: health-check-vertx
       provider: fabric8
-      version: 20-SNAPSHOT
+      version: "20"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -146,7 +146,7 @@ objects:
     template:
       metadata:
         annotations:
-          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=20-SNAPSHOT
+          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=20
           fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
           fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
           fabric8.io/iconUrl: img/icons/vertx.svg
@@ -156,7 +156,7 @@ objects:
         labels:
           app: health-check-vertx
           provider: fabric8
-          version: 20-SNAPSHOT
+          version: "20"
           group: io.openshift.booster
       spec:
         containers:
@@ -165,7 +165,7 @@ objects:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: ' '
+          image: health-check-vertx:20
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 1
@@ -200,13 +200,21 @@ objects:
             privileged: false
     triggers:
     - type: ConfigChange
+    - imageChangeParams:
+        automatic: true
+        containerNames:
+        - vertx
+        from:
+          kind: ImageStreamTag
+          name: health-check-vertx:20
+      type: ImageChange
 - apiVersion: v1
   kind: Route
   metadata:
     labels:
       app: health-check-vertx
       provider: fabric8
-      version: 20-SNAPSHOT
+      version: "20"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
