--- a/.openshiftio/application.yaml
+++ b/.openshiftio/application.yaml
@@ -56,7 +56,7 @@ objects:
     output:
       to:
         kind: ImageStreamTag
-        name: health-check-vertx:latest
+        name: ${IMAGENAME}
     postCommit: {}
     resources: {}
     source:
@@ -97,12 +97,12 @@ objects:
       fabric8.io/git-branch: master
       prometheus.io/scrape: "true"
       fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-      fabric8.io/scm-tag: booster-parent-20
+      fabric8.io/scm-tag: booster-parent-23
     labels:
       expose: "true"
       app: health-check-vertx
       provider: fabric8
-      version: 21-SNAPSHOT
+      version: "21"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -119,17 +119,17 @@ objects:
   kind: DeploymentConfig
   metadata:
     annotations:
-      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=21-SNAPSHOT
+      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=21
       fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
       fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
       fabric8.io/iconUrl: img/icons/vertx.svg
       fabric8.io/git-branch: master
       fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-      fabric8.io/scm-tag: booster-parent-20
+      fabric8.io/scm-tag: booster-parent-23
     labels:
       app: health-check-vertx
       provider: fabric8
-      version: 21-SNAPSHOT
+      version: "21"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -146,17 +146,17 @@ objects:
     template:
       metadata:
         annotations:
-          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=21-SNAPSHOT
+          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=21
           fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
           fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
           fabric8.io/iconUrl: img/icons/vertx.svg
           fabric8.io/git-branch: master
           fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-          fabric8.io/scm-tag: booster-parent-20
+          fabric8.io/scm-tag: booster-parent-23
         labels:
           app: health-check-vertx
           provider: fabric8
-          version: 21-SNAPSHOT
+          version: "21"
           group: io.openshift.booster
       spec:
         containers:
@@ -165,7 +165,7 @@ objects:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: health-check-vertx:latest
+          image: booster/health-check-vertx:21
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 1
@@ -200,21 +200,13 @@ objects:
             privileged: false
     triggers:
     - type: ConfigChange
-    - imageChangeParams:
-        automatic: true
-        containerNames:
-        - vertx
-        from:
-          kind: ImageStreamTag
-          name: health-check-vertx:latest
-      type: ImageChange
 - apiVersion: v1
   kind: Route
   metadata:
     labels:
       app: health-check-vertx
       provider: fabric8
-      version: 21-SNAPSHOT
+      version: "21"
       group: io.openshift.booster
     name: health-check-vertx
   spec:
