--- a/.openshiftio/application.yaml
+++ b/.openshiftio/application.yaml
@@ -102,7 +102,7 @@ objects:
       expose: "true"
       app: health-check-vertx
       provider: fabric8
-      version: "21"
+      version: 22-SNAPSHOT
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -119,7 +119,7 @@ objects:
   kind: DeploymentConfig
   metadata:
     annotations:
-      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=21
+      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=22-SNAPSHOT
       fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
       fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
       fabric8.io/iconUrl: img/icons/vertx.svg
@@ -129,7 +129,7 @@ objects:
     labels:
       app: health-check-vertx
       provider: fabric8
-      version: "21"
+      version: 22-SNAPSHOT
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -146,7 +146,7 @@ objects:
     template:
       metadata:
         annotations:
-          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=21
+          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=22-SNAPSHOT
           fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
           fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
           fabric8.io/iconUrl: img/icons/vertx.svg
@@ -156,7 +156,7 @@ objects:
         labels:
           app: health-check-vertx
           provider: fabric8
-          version: "21"
+          version: 22-SNAPSHOT
           group: io.openshift.booster
       spec:
         containers:
@@ -165,7 +165,7 @@ objects:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: booster/health-check-vertx:21
+          image: booster/health-check-vertx:snapshot-180702-124842-0524
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 1
@@ -206,7 +206,7 @@ objects:
     labels:
       app: health-check-vertx
       provider: fabric8
-      version: "21"
+      version: 22-SNAPSHOT
       group: io.openshift.booster
     name: health-check-vertx
   spec:
