--- a/.openshiftio/application.yaml
+++ b/.openshiftio/application.yaml
@@ -56,7 +56,7 @@ objects:
     output:
       to:
         kind: ImageStreamTag
-        name: ${IMAGENAME}
+        name: health-check-vertx:latest
     postCommit: {}
     resources: {}
     source:
@@ -165,7 +165,7 @@ objects:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: booster/health-check-vertx:snapshot-180702-124842-0524
+          image: health-check-vertx:latest
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 1
@@ -200,10 +200,19 @@ objects:
             privileged: false
     triggers:
     - type: ConfigChange
-- apiVersion: v1
+    - imageChangeParams:
+        automatic: true
+        containerNames:
+        - vertx
+        from:
+          kind: ImageStreamTag
+          name: health-check-vertx:latest
+      type: ImageChange
+- apiVersion: route.openshift.io/v1
   kind: Route
   metadata:
     labels:
+      expose: "true"
       app: health-check-vertx
       provider: fabric8
       version: 22-SNAPSHOT
