--- a/.openshiftio/application.yaml
+++ b/.openshiftio/application.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: launcher-builder
+  name: vertx-health-check-booster
   annotations:
-    description: This template creates a Build Configuration using an S2I builder.
+    description: This template creates a Vert.x application providing health check endpoint to be consumed by Kubernetes.
     tags: instant-app
 parameters:
 - name: SOURCE_REPOSITORY_URL
@@ -26,6 +26,7 @@ parameters:
   required: true
   from: '[a-zA-Z0-9]{40}'
   generate: expression
+
 objects:
 - apiVersion: v1
   kind: ImageStream
@@ -34,6 +35,7 @@ objects:
     labels:
       booster: health-check-vertx
   spec: {}
+
 - apiVersion: v1
   kind: ImageStream
   metadata:
@@ -46,6 +48,7 @@ objects:
       from:
         kind: DockerImage
         name: registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift
+
 - apiVersion: v1
   kind: BuildConfig
   metadata:
@@ -56,9 +59,7 @@ objects:
     output:
       to:
         kind: ImageStreamTag
-        name: booster/health-check-vertx:snapshot-180813-115217-0604
-    postCommit: {}
-    resources: {}
+        name: health-check-vertx:latest
     source:
       git:
         uri: ${SOURCE_REPOSITORY_URL}
@@ -84,25 +85,15 @@ objects:
     - type: ConfigChange
     - imageChange: {}
       type: ImageChange
-  status:
-    lastVersion: 0
+
 - apiVersion: v1
   kind: Service
   metadata:
     annotations:
-      fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
       prometheus.io/port: "9779"
-      fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
-      fabric8.io/iconUrl: img/icons/vertx.svg
-      fabric8.io/git-branch: master
       prometheus.io/scrape: "true"
-      fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-      fabric8.io/scm-tag: booster-parent-23
     labels:
-      expose: "true"
       app: health-check-vertx
-      provider: fabric8
-      version: 24-SNAPSHOT
       group: io.openshift.booster
     name: health-check-vertx
   spec:
@@ -113,50 +104,24 @@ objects:
       targetPort: 8080
     selector:
       app: health-check-vertx
-      provider: fabric8
       group: io.openshift.booster
+
 - apiVersion: apps.openshift.io/v1
   kind: DeploymentConfig
   metadata:
-    annotations:
-      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=24-SNAPSHOT
-      fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
-      fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
-      fabric8.io/iconUrl: img/icons/vertx.svg
-      fabric8.io/git-branch: master
-      fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-      fabric8.io/scm-tag: booster-parent-23
     labels:
       app: health-check-vertx
-      provider: fabric8
-      version: 24-SNAPSHOT
       group: io.openshift.booster
     name: health-check-vertx
   spec:
     replicas: 1
-    revisionHistoryLimit: 2
     selector:
       app: health-check-vertx
-      provider: fabric8
       group: io.openshift.booster
-    strategy:
-      rollingParams:
-        timeoutSeconds: 3600
-      type: Rolling
     template:
       metadata:
-        annotations:
-          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=health-check-vertx&var-version=24-SNAPSHOT
-          fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/health-check-vertx
-          fabric8.io/scm-url: https://github.com/openshiftio/health-check-vertx
-          fabric8.io/iconUrl: img/icons/vertx.svg
-          fabric8.io/git-branch: master
-          fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/health-check-vertx
-          fabric8.io/scm-tag: booster-parent-23
         labels:
           app: health-check-vertx
-          provider: fabric8
-          version: 24-SNAPSHOT
           group: io.openshift.booster
       spec:
         containers:
@@ -165,7 +130,7 @@ objects:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: booster/health-check-vertx:snapshot-180813-115217-0604
+          image: health-check-vertx:master
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 1
@@ -196,18 +161,22 @@ objects:
             initialDelaySeconds: 10
             periodSeconds: 3
             timeoutSeconds: 1
-          securityContext:
-            privileged: false
     triggers:
     - type: ConfigChange
+    - type: ImageChange
+      imageChangeParams:
+        automatic: true
+        containerNames:
+          - vertx
+        from:
+          kind: ImageStreamTag
+          name: health-check-vertx:latest
+
 - apiVersion: route.openshift.io/v1
   kind: Route
   metadata:
     labels:
-      expose: "true"
       app: health-check-vertx
-      provider: fabric8
-      version: 24-SNAPSHOT
       group: io.openshift.booster
     name: health-check-vertx
   spec:
