--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>io.openshift.booster</groupId>
   <artifactId>health-check-vertx</artifactId>
 
-  <version>24</version>
+  <version>25-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Vert.x - Health Checks</name>
