--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.openshift.booster</groupId>
   <artifactId>health-check-vertx</artifactId>
-  <version>27-SNAPSHOT</version>
+  <version>27</version>
   <packaging>jar</packaging>
 
   <name>Vert.x - Health Checks</name>
