--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <description>Demonstrates health check probes using Vert.x</description>
 
   <properties>
-    <vertx.version>3.7.0</vertx.version>
+    <vertx.version>3.7.1</vertx.version>
     <vertx-maven-plugin.version>1.0.18</vertx-maven-plugin.version>
     <vertx.verticle>io.openshift.booster.HttpApplication</vertx.verticle>
 
@@ -22,7 +22,7 @@
     <fabric8-maven-plugin.version>4.1.0</fabric8-maven-plugin.version>
     <arquillian-cube.version>1.18.2</arquillian-cube.version>
 
-    <fabric8.generator.from>registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.5</fabric8.generator.from>
+    <fabric8.generator.from>registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift</fabric8.generator.from>
   </properties>
 
   <dependencyManagement>
