add recommended labels via fmp

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,25 @@
           <redeploy>true</redeploy>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>4.0.0</version>
+        <executions>
+          <execution>
+            <id>get-the-git-infos</id>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+            <phase>initialize</phase>
+          </execution>
+        </executions>
+        <configuration>
+          <includeOnlyProperties>
+            <includeOnlyProperty>^git.remote.origin.url$</includeOnlyProperty>
+          </includeOnlyProperties>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -131,13 +150,49 @@
                 <goals>
                   <goal>resource</goal>
                   <goal>build</goal>
+                  <goal>apply</goal>
                 </goals>
+                <phase>package</phase>
                 <configuration>
                   <enricher>
                     <excludes>
                       <exclude>f8-maven-scm</exclude>
                     </excludes>
                   </enricher>
+                  <resources>
+                    <labels>
+                      <all>
+                        <property>
+                          <name>app.kubernetes.io/part-of</name>
+                          <value>health-check-example</value>
+                        </property>
+                        <property>
+                          <name>app.kubernetes.io/name</name>
+                          <value>health-check</value>
+                        </property>
+                        <property>
+                          <name>app.kubernetes.io/component</name>
+                          <value>frontend</value>
+                        </property>
+                        <property>
+                          <name>app.kubernetes.io/runtime</name>
+                          <value>vertx</value>
+                        </property>
+                        <property>
+                          <name>app.kubernetes.io/runtime-version</name>
+                          <value>${vertx.version}</value>
+                        </property>
+                      </all>
+                    </labels>
+                    <annotations>
+                      <all>
+                        <property>
+                          <name>app.kubernetes.io/vcs-uri</name>
+                          <value>${git.remote.origin.url}</value>
+                        </property>
+                      </all>
+                    </annotations>
+                  </resources>
                 </configuration>
               </execution>
             </executions>
