--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.openshift.example</groupId>
   <artifactId>health-check-vertx</artifactId>
-  <version>35-SNAPSHOT</version>
+  <version>35</version>
   <packaging>jar</packaging>
 
   <name>Vert.x - Health Checks</name>
